<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_activity_main_drawer"
            android:icon="@drawable/menu"
            android:title="@string/categories_drawer"
            />
    </group>

    <item android:title="@string/sections_drawer"
        >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_drawer_arts_section"

                    android:title="@string/arts" />
                <item
                    android:id="@+id/menu_drawer_business_section"

                    android:title="@string/business" />
                <item
                    android:id="@+id/menu_drawer_food_section"

                    android:title="@string/food" />
                <item
                    android:id="@+id/menu_drawer_politics_section"

                    android:title="@string/politics" />
                <item
                    android:id="@+id/menu_drawer_science_section"

                    android:title="@string/sciences" />
                <item
                    android:id="@+id/menu_drawer_sports_section"

                    android:title="@string/sports" />
                <item
                    android:id="@+id/menu_drawer_technology_section"

                    android:title="@string/technology" />

            </group>
        </menu>
    </item>

</menu>