<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dots"
    tools:context=".controllers.activities.SearchAndNotifActivity">

    <!-- Toolbar -->
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/searchField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/mainBackground"
        android:cursorVisible="true"
        android:drawableStart="@drawable/search"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:textCursorDrawable="@color/mainTextHighlight"
        tools:ignore="Autofill" />

    <CheckBox
        android:id="@+id/cbArts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/searchField"
        android:layout_alignTop="@+id/searchField"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/arts"
        android:textColor="@color/mainText"
        android:textSize="@dimen/cb_size_string"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/cbBusiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cbArts"
        android:layout_alignTop="@+id/cbArts"
        android:layout_marginTop="45dp"
        android:text="@string/business"
        android:textColor="@color/mainText"
        android:textSize="@dimen/cb_size_string"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/cbFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cbBusiness"
        android:layout_alignTop="@+id/cbBusiness"
        android:layout_marginTop="45dp"
        android:text="@string/food"
        android:textColor="@color/mainText"
        android:textSize="@dimen/cb_size_string"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/cbSciences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/searchField"
        android:layout_alignTop="@+id/searchField"
        android:layout_marginStart="220dp"
        android:layout_marginTop="100dp"
        android:text="@string/sciences"
        android:textColor="@color/mainText"
        android:textSize="@dimen/cb_size_string"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/cbPolitics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cbSciences"
        android:layout_alignTop="@+id/cbSciences"
        android:layout_marginTop="45dp"
        android:text="@string/politics"
        android:textColor="@color/mainText"
        android:textSize="@dimen/cb_size_string"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/cbSports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cbPolitics"
        android:layout_alignTop="@+id/cbPolitics"
        android:layout_marginTop="45dp"
        android:text="@string/sports"
        android:textColor="@color/mainText"
        android:textSize="@dimen/cb_size_string"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/cbTechnology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cbFood"
        android:layout_alignTop="@+id/cbFood"
        android:layout_marginStart="75dp"
        android:layout_marginTop="45dp"
        android:text="@string/technology"
        android:textColor="@color/mainText"
        android:textSize="@dimen/cb_size_string"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />


    <View
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/cbTechnology"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:background="@color/mainBackground" />

    <TextView
        android:id="@+id/searchBeginDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bar"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/begin_date" />

    <TextView
        android:id="@+id/editBeginDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/searchBeginDateTV"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:drawableEnd="@drawable/drop_down_arrow"
        android:focusable="true"
        android:hint="@string/date_empty"
        android:longClickable="false"
        android:textColor="@color/textSmoothColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/searchEndDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bar"
        android:layout_marginStart="250dp"
        android:layout_marginTop="60dp"
        android:text="@string/end_date" />


    <TextView
        android:id="@+id/editEndDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/searchEndDateTV"
        android:layout_alignTop="@+id/searchEndDateTV"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:drawableEnd="@drawable/drop_down_arrow"
        android:focusable="true"
        android:hint="@string/date_empty"
        android:longClickable="false"
        android:textColor="@color/textSmoothColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/searchButton"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editBeginDateTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@color/mainBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/search_field"
        android:textColor="@color/mainTextHighlight"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_notif_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/bar"
        android:layout_alignTop="@id/bar"
        android:layout_marginTop="25dp"
        android:text="@string/enable_notifications"
        android:textSize="20sp" />

    <Switch
        android:id="@+id/switchButtonNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_notif_txt"
        android:layout_alignEnd="@id/bar" />

    <TextView
        android:id="@+id/tv_notif_time_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/tv_notif_txt"
        android:layout_alignTop="@id/tv_notif_txt"
        android:layout_marginTop="70dp"
        android:text="@string/notification_time"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/edit_time_notif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/bar"
        android:layout_alignBottom="@id/tv_notif_time_txt"
        android:clickable="true"
        android:drawableEnd="@drawable/drop_down_arrow"
        android:focusable="true"
        android:hint="@string/time"
        android:longClickable="false"
        android:textColor="@color/textSmoothColor"
        android:textSize="20sp" />

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_search_FrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        tools:ignore="RedundantNamespace">

    </FrameLayout>

</RelativeLayout>