<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.NotificationActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editSearchNotif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:inputType="text"
        android:hint="@string/search_hint"
        android:cursorVisible="true"
        android:textCursorDrawable="@color/mainTextHighlight"
        android:backgroundTint="@color/mainBackground"
        android:drawableStart="@drawable/search"
        tools:ignore="Autofill"
        />

    <CheckBox
        android:id="@+id/cbArtsNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editSearchNotif"
        android:layout_alignStart="@+id/editSearchNotif"
        android:layout_marginTop="100dp"
        android:layout_marginStart="40dp"
        android:text="@string/arts"
        android:textSize="@dimen/cb_size_string"
        android:textColor="@color/mainText"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/cbBusinessNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cbArtsNotif"
        android:layout_alignStart="@+id/cbArtsNotif"
        android:layout_marginTop="45dp"
        android:text="@string/business"
        android:textSize="@dimen/cb_size_string"
        android:textColor="@color/mainText"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/cbFoodNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cbBusinessNotif"
        android:layout_alignStart="@+id/cbBusinessNotif"
        android:layout_marginTop="45dp"
        android:text="@string/food"
        android:textSize="@dimen/cb_size_string"
        android:textColor="@color/mainText"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/cbSciencesNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editSearchNotif"
        android:layout_alignStart="@+id/editSearchNotif"
        android:layout_marginTop="100dp"
        android:layout_marginStart="220dp"
        android:text="@string/sciences"
        android:textSize="@dimen/cb_size_string"
        android:textColor="@color/mainText"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap"/>

    <CheckBox
        android:id="@+id/cbPoliticsNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cbSciencesNotif"
        android:layout_alignStart="@+id/cbSciencesNotif"
        android:layout_marginTop="45dp"
        android:text="@string/politics"
        android:textSize="@dimen/cb_size_string"
        android:textColor="@color/mainText"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/cbSportsNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cbPoliticsNotif"
        android:layout_alignStart="@+id/cbPoliticsNotif"
        android:layout_marginTop="45dp"
        android:text="@string/sports"
        android:textSize="@dimen/cb_size_string"
        android:textColor="@color/mainText"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/cbTechnologyNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cbFoodNotif"
        android:layout_alignStart="@+id/cbFoodNotif"
        android:layout_marginTop="45dp"
        android:layout_marginStart="75dp"
        android:text="@string/technology"
        android:textSize="@dimen/cb_size_string"
        android:textColor="@color/mainText"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <View
        android:id="@+id/bar"
        android:background="@color/mainBackground"
        android:layout_width = "match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="15dp"
        android:layout_alignTop="@+id/cbTechnologyNotif"
        android:layout_marginEnd="15dp"
        />

    <TextView
        android:id="@+id/tv_notif_enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_notifications"
        android:layout_alignTop="@id/bar"
        android:layout_alignStart="@id/bar"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        />

    <Switch
        android:id="@+id/switchNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_notif_enable"
        android:layout_alignEnd="@id/bar"
        />

    <TextView
        android:id="@+id/tv_notif_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_time"
        android:layout_alignTop="@id/tv_notif_enable"
        android:layout_alignStart="@id/tv_notif_enable"
        android:layout_marginTop="70dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/edit_notif_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_notif_time"
        android:layout_alignEnd="@id/bar"
        android:clickable="true"
        android:longClickable="false"
        android:focusable="true"
        android:drawableEnd="@drawable/drop_down_arrow"
        android:textColor="@color/textSmoothColor"
        android:hint="@string/time"
        android:textSize="20sp"
        />

</RelativeLayout>