<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayoutSearch"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/fragment_search_item_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:background="@drawable/y_u_no_image"
            tools:ignore="ContentDescription,UnknownId" />

        <TextView
            android:id="@+id/fragment_search_item_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/fragment_search_item_image"
            android:text="@string/section"
            tools:ignore="UnknownId" />

        <TextView
            android:id="@+id/fragment_search_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/fragment_search_item_section"
            android:layout_marginTop="40dp"
            android:maxLines="2"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="UnknownId" />

        <TextView
            android:id="@+id/fragment_search_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/fragment_search_item_section"
            android:maxLines="1"
            android:text="@string/empty_date"
            tools:ignore="UnknownId" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="99dp"
            android:background="@color/mainBackground" />

    </RelativeLayout>

</LinearLayout>